# sports-scores-cli-rust

./: .gitignore  Cargo.toml  README.md
src/: fixture_response.rs  helper_functions.rs  main.rs  search_response.rs  team_requests.rs
src/helpers/: helper_functions.rs
