[package]
name = "sports-scores-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.69"
tokio = {version = "1", features = ["full"]}
chrono = "0.4"
colour = "0.7.0";